changed addons type

--- a/app.json
+++ b/app.json
@@ -1,7 +1,9 @@
 {
   "environments": {
     "test": {
-      "addons": "heroku-postgresql:hobby-dev"
+      "addons": [
+        "heroku-postgresql:hobby-dev"
+      ]
     }
   }
 }
