--- a/app.json
+++ b/app.json
@@ -3,7 +3,10 @@
     "test": {
       "addons": [
         "heroku-postgresql:hobby-dev"
-      ]
+      ],
+      "scripts": {
+        "test": "nose test"
+      }
     }
   }
 }
